modified:   main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## One-Dim Incremental learning"
+    "## One-Dim Incremental learning\n",
+    "upload to github"
    ]
   },
   {
