--- a/main.ipynb
+++ b/main.ipynb
@@ -6,13 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## One-Dim Incremental learning\n",
-    "upload to github"
+    "## One-Dim Incremental learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,34 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.0971, -0.0596,  0.0462,  0.0827]], grad_fn=<AddmmBackward0>)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = net.forward(input)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +91,7 @@
        "torch.Size([1, 40, 14])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,18 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3, 1)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'sin.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35172/3146827509.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sin.npy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtri\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tri.npy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msqu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'squ.npy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msin\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtri\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msqu\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pt\\lib\\site-packages\\numpy\\lib\\npyio.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[0;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    416\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 417\u001b[1;33m             \u001b[0mfid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    419\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'sin.npy'"
+     ]
     }
    ],
    "source": [
@@ -157,61 +131,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sequential(\n",
-      "  (0): Linear(in_features=256, out_features=128, bias=True)\n",
-      "  (1): ReLU()\n",
-      "  (2): Linear(in_features=128, out_features=10, bias=True)\n",
-      "  (3): ReLU()\n",
-      "  (4): Linear(in_features=10, out_features=1, bias=True)\n",
-      "  (5): Sigmoid()\n",
-      ")\n",
-      "tensor([[0.0070],\n",
-      "        [0.9969],\n",
-      "        [1.0000]])\n"
+      "tensor([[0.],\n",
+      "        [1.],\n",
+      "        [2.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [2.]])\n"
      ]
     }
    ],
    "source": [
+    "## 这里写了一个简单的神经网络，方便理解\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
-    "\n",
+    "import torch.nn.functional as F\n",
+    "import matplotlib.pyplot as plt\n",
     "# 效果不太好\n",
-    "sin = np.array(np.load('sin.npy'))\n",
-    "tri = np.array(np.load('tri.npy'))\n",
-    "squ = np.array(np.load('squ.npy'))\n",
+    "sin = np.array(np.load('data/sin.npy'))\n",
+    "tri = np.array(np.load('data/tri.npy'))\n",
+    "squ = np.array(np.load('data/squ.npy'))\n",
     "\n",
+    "sin_30 = np.array(np.load('data/sin_30.npy'))\n",
+    "tri_30 = np.array(np.load('data/tri_30.npy'))\n",
+    "squ_30 = np.array(np.load('data/squ_30.npy'))\n",
     "# 构建输入集\n",
     "# x = np.mat('0 0;'\n",
     "#            '0 1;'\n",
     "#            '1 0;'\n",
     "#            '1 1')\n",
-    "x = np.array([sin,tri,squ])\n",
+    "\n",
+    "x = np.array([sin,tri,squ,sin_30,tri_30,squ_30])\n",
     "x = torch.tensor(x).float()\n",
-    "y = np.array([[0],[1],[2]])\n",
+    "y = np.array([[0],[1],[2],[0],[1],[2]])\n",
     "y = torch.tensor(y).float()\n",
     "\n",
+    "\n",
+    "\n",
     "# 搭建网络\n",
-    "myNet = nn.Sequential(\n",
-    "    nn.Linear(256, 128),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(128, 10),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(10, 1),\n",
-    "    nn.Sigmoid()\n",
-    ")\n",
-    "print(myNet)\n",
+    "class MyModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MyModel, self).__init__()\n",
+    "        self.cl1 = nn.Linear(256, 128)\n",
+    "        self.cl2 = nn.Linear(128,10)\n",
+    "        self.fc1 = nn.Linear(10,1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.cl1(x))\n",
+    "        x = F.relu(self.cl2(x))\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        return x\n",
+    "\n",
+    "activation = {}\n",
+    "def get_activation(name):\n",
+    "    def hook(model, input, output):\n",
+    "        activation[name] = output.detach()\n",
+    "    return hook\n",
+    "\n",
+    "myNet = MyModel()\n",
+    "myNet.fc1.register_forward_hook(get_activation('fc1'))\n",
     "\n",
     "# 设置优化器\n",
     "optimzer = torch.optim.SGD(myNet.parameters(), lr=0.05)\n",
     "loss_func = nn.MSELoss()\n",
+    "\n",
     "\n",
     "for epoch in range(5000):\n",
     "    out = myNet(x)\n",
@@ -220,40 +211,56 @@
     "    loss.backward()\n",
     "    optimzer.step()\n",
     "\n",
+    "# print(activation['fc1'])\n",
     "\n",
-    "print(myNet(x).data)\n"
+    "print(myNet(x).data)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array(np.load('data/sin_31.npy'))\n",
+    "x = torch.tensor(x).float()\n",
+    "print(myNet(x).data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0173])"
+       "[2]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input=np.load('sin_30.npy')\n",
-    "x = torch.tensor(input).float()\n",
-    "(myNet(x).data)\n"
+    "a = []\n",
+    "a.append(2)\n",
+    "a"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +341,17 @@
       "  (fc2): Linear(in_features=4096, out_features=4096, bias=True)\n",
       "  (fc3): Linear(in_features=4096, out_features=3, bias=True)\n",
       ")\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "parameters() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35172/1889190559.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0minput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m227\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# batch, channel, Height, Width\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0moptimzer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOneDimNet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.05\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mloss_func\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMSELoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: parameters() missing 1 required positional argument: 'self'"
      ]
     }
    ],
@@ -356,20 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 0.0509, -0.8549,  0.0343,  ...,  0.4890,  0.0732, -0.3196],\n",
-      "         [ 0.8909,  0.1815, -0.5570,  ...,  0.0067,  0.2550,  0.3093],\n",
-      "         [-1.2353,  0.0278,  0.5363,  ..., -0.8812, -0.7001,  0.7730],\n",
+      "tensor([[[ 0.4788, -0.4595,  0.4206,  ...,  0.6415,  0.8621, -0.0820],\n",
+      "         [ 0.9075,  0.7026, -0.4566,  ...,  0.8942, -0.3017, -0.0664],\n",
+      "         [ 0.3873,  0.1756,  0.7099,  ...,  1.2519,  0.8428,  0.8790],\n",
       "         ...,\n",
-      "         [-0.0428,  0.3096,  0.0481,  ...,  0.8138,  1.2837, -0.3760],\n",
-      "         [ 1.5505,  0.4601, -0.5719,  ...,  0.7353,  0.5914, -0.4212],\n",
-      "         [-0.7276, -0.0724,  0.5273,  ..., -0.2496, -0.8922, -0.6197]]],\n",
+      "         [ 0.4584,  0.7585,  0.8612,  ..., -0.2446, -0.0886,  0.2389],\n",
+      "         [ 0.0897, -0.3149, -0.0532,  ..., -0.5106, -1.0129, -0.7503],\n",
+      "         [-0.5296,  0.0194, -0.7537,  ...,  0.4335, -0.3794, -1.6667]]],\n",
       "       grad_fn=<SqueezeBackward1>)\n"
      ]
     }
@@ -380,13 +398,6 @@
     "out = conv1(input)\n",
     "print(out)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
